Add status property to the root of async callback endpoint response
